# ferrox

./: .gitignore  Cargo.toml  Ferrox Design Doc.docx
.github/workflows/: audit.yml  ci.yml
crates/ferrox-api/: Cargo.toml
crates/ferrox-api/src/: lib.rs
crates/ferrox-core/: Cargo.toml
crates/ferrox-core/src/: dag.rs  error.rs  ids.rs  lib.rs  run.rs  state.rs  task_instance.rs
crates/ferrox-executor/: Cargo.toml
crates/ferrox-executor/src/: lib.rs
crates/ferrox-migrate/: Cargo.toml
crates/ferrox-migrate/src/: error.rs  lib.rs
crates/ferrox-migrate/tests/: schema.rs
crates/ferrox-parser/: Cargo.toml
crates/ferrox-parser/src/: lib.rs
crates/ferrox-scheduler/: Cargo.toml
crates/ferrox-scheduler/src/: lib.rs
crates/ferrox-store/: Cargo.toml
crates/ferrox-store/src/: error.rs  lib.rs  postgres.rs  record.rs
crates/ferrox-store/tests/: postgres.rs
docs/: CHANGELOG.md  DEVLOG.md
docs/adr/: 0001-pyo3-over-subprocess.md  0002-sqlx-over-diesel.md  0003-tokio-multi-thread-executor.md  0004-axum-for-api-server.md  0005-bincode-for-dag-cache.md
ferrox/: Cargo.toml
ferrox/src/: main.rs
tests/compat/: README.md
tests/integration/: README.md
