[package]
name = "ferrox-core"
description = "Core Ferrox domain model: DAG definitions, runs, task instances, and the task state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
