[package]
name = "ferrox-migrate"
description = "Migration CLI: validates a live Airflow metadata DB for Ferrox compatibility"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
