[package]
name = "ferrox-store"
description = "Metadata store: the MetadataStore trait and its sqlx Postgres implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ferrox-core = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
